[package]
name = "clierr"
version = "0.7.0"
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]

description = "Non-panicking error handling for small CLI scripts."
homepage = "https://github.com/cristicbz/clierr.rs"
repository = "https://github.com/cristicbz/clierr.rs"
readme = "README.md"
keywords = ["cli", "error", "handling", "minimalist", "small"]
license = "MIT/Apache-2.0"
